--- a/views/partials/NotFound.ejs
+++ b/views/partials/NotFound.ejs
@@ -8,7 +8,7 @@
     </p>
     <div>
         <img class="img-fluid"
-            src="https://res.cloudinary.com/dtwgxcqkr/image/upload/h_500/v1699117125/YelpCamp%20Related%20Media/c2z8yuattlh02hqy9zra.png"
+            src="https://res.cloudinary.com/dtwgxcqkr/image/upload/w_300,h_300,c_scale/v1699117125/YelpCamp%20Related%20Media/c2z8yuattlh02hqy9zra.png"
             title="error icons" alt="Error icons created by LAFS - Flaticon">
     </div>
 </div>
