--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -3,21 +3,26 @@
     <div id="clusterMap" class="mb-3"></div>
     <% const options={ "Latest" : { sortBy: "latest" }, "Earliest" : { sortBy: "earliest" }, "Top Rated" : { sortBy: "top-rated" }, "Premium" : { sortBy: "premium" }, "Economic" : { sortBy: "economic" }, "Title [A-Z]" : { sortBy: "title-asc" }, "Title [Z-A]" : { sortBy: "title-desc" }, "Location [A-Z]" : { sortBy: "location-asc" }, "Location [Z-A]" : { sortBy: "location-desc" } }; %>
       <% if(!current.find) { %>
-        <label class="form-label">Sort page <%=current.page%> results by: </label>
-        <select class="form-select-sm my-3" id="categories" name="categories">
-          <% for(let option in options) { %>
-            <option value="<%=option%>" <%=(options[option].sortBy.toLowerCase()==="latest" ) ? "selected" : "" %>>
-              <%=option%></a>
-            </option>
-            <% } %>
-        </select>
+        <div class="my-3 ms-auto">
+          <label class="form-label">Sort page <%=current.page%> results by: </label>
+          <select class="form-select-sm categories" name="categories">
+            <% for(let option in options) { %>
+              <option value="<%=option%>" <%=(options[option].sortBy.toLowerCase()==="latest" ) ? "selected" : "" %>>
+                <%=option%></a>
+              </option>
+              <% } %>
+          </select>
+        </div>
         <% } %>
+        <% if (current.user) { %>
+          <h1 class="mb-3 pb-3 border-bottom"><%=username%>'s Campgrounds</h1>
+          <% } %>
           <% for(let campgroundSortBy in campgrounds) { %>
             <% if(current.find) { %>
               <% let sortLabel; %>
                 <% for(const option in options){ if(options[option].sortBy===current.find) { sortLabel=option } } %>
-                  <h1 class="my-4 pb-3 border-bottom"><%=sortLabel%> Campgrounds</h1>
-                  <% } %>
+                <h1 class="my-4 pb-3 border-bottom"><%=sortLabel%> Campgrounds</h1>
+                <% } %>
                     <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4 campground<%=(campgroundSortBy === "latest") ? "" : " d-none" %>" id="<%=campgroundSortBy%>">
                       <% for (let campground of campgrounds[campgroundSortBy]) { %>
                         <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
@@ -41,7 +46,7 @@
                                     </p>
                                     <p class="mt-3">
                                       <b>Suggested By:</b>
-                                      <%=campground.author.name%> <a href="/users/<%=campground.author.username%>" title="View <%=campground.author.name%>" class="text-decoration-none"><%=`(@${campground.author.username})`%></a>
+                                      <%=campground.author.name%> <a href="/campgrounds?user=<%=campground.author.username%>" title="View <%=campground.author.name%>" class="text-decoration-none"><%=`(@${campground.author.username})`%></a>
                                     </p>
                                     <p class="mt-3 text-justify">
                                       <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
@@ -66,12 +71,16 @@
                                 <a class="active">
                                   <%=page%>
                                 </a>
-                                <% } else if(current.find) { %>
-                                  <a href="/campgrounds?find=<%=current.find%>&page=<%=page%>&limit=<%=current.limit%>">
+                                <% } else if(current.user) { %>
+                                  <a href="/campgrounds?user=<%=current.user%>&page=<%=page%>&limit=<%=current.limit%>">
                                     <%=page%>
                                   </a>
-                                  <% } else { %>
+                                  <% } else if(current.select) { %>
                                     <a href="/campgrounds?select=<%=current.select%>&page=<%=page%>&limit=<%=current.limit%>">
+                                      <%=page%>
+                                    </a>
+                                    <% } else { %>
+                                    <a href="/campgrounds?find=<%=current.find%>&page=<%=page%>&limit=<%=current.limit%>">
                                       <%=page%>
                                     </a>
                                     <% } %>
