--- a/views/users/Profile.ejs
+++ b/views/users/Profile.ejs
@@ -4,3 +4,59 @@
         <h2>@(<%=user.username%>)</h2>
     </div>
     <hr>
+    <div class="row d-flex justify-content-center">
+        <div class="col-lg-12">
+            <div class="card shadow" style="height: 100%;">
+                <div class="card-body d-flex flex-column">
+                    <% const options={ "Latest" : { sortBy: "latest" }, "Top Rated" : { sortBy: "top-rated" } }; %>
+                        <div class="my-2 ms-auto">
+                            <label class="form-label">Sort results by: </label>
+                            <select class="form-select-sm categories" name="categories">
+                                <% for(let option in options) { %>
+                                    <option value="<%=option%>" <%=(options[option].sortBy.toLowerCase()==="latest" ) ? "selected" : "" %>><%=option%></option>
+                                    <% } %>
+                            </select>
+                        </div>
+                        <h3 class="card-title"><span id="heading">Latest</span> Campgrounds</h3>
+                        <hr>
+                        <% for(let camp in campgrounds) { %>
+                            <div class="d-flex flex-row justify-content-start gap-4 p-4 campground wrapper <%=(camp === "latest") ? "" : " d-none" %>" id="<%=camp%>">
+                                    <% for (let campground of campgrounds[camp]) { %>
+                                        <% let campgroundBackgroundImageURL=(campground.images.length>0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
+                                            <div class="card view" style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
+                                                <div class="col d-flex flex-column justify-content-between">
+                                                    <div class="row">
+                                                        <div class="card-body d-flex flex-column px-4">
+                                                            <h4 class="ms-auto"><i class="fa-solid fa-flip fa-star" style="color: #ffd700;"></i>
+                                                                <%=campground.avgRating%> (<%=campground.reviews.length%>)
+                                                            </h4>
+                                                            <h1 class="card-title">
+                                                                <%=campground.title%>
+                                                            </h1>
+                                                            <div class="card-text">
+                                                                <small class="text-muted">
+                                                                    <%=campground.location%>
+                                                                </small>
+                                                                <p class="mt-3">
+                                                                    <b>Price:</b> Rs.
+                                                                    <%=campground.price%>/-
+                                                                </p>
+                                                                <p class="mt-3 text-justify">
+                                                                    <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row text-center pb-3 px-5">
+                                                        <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm" title="View Campground">View</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <% } %>
+                            </div>
+                            <% } %>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/JS/Sort Campgrounds.js"></script>
