--- a/views/users/Profile.ejs
+++ b/views/users/Profile.ejs
@@ -1,8 +1,23 @@
 <% layout('/layouts/BoilerPlate') %>
-    <div class="d-flex align-items-center gap-3">
-        <h1><%=user.name%></h1>
-        <h2>@(<%=user.username%>)</h2>
-    </div>
+    <div class="d-flex flex-wrap">
+        <div class="d-flex flex-wrap align-items-center gap-4">
+            <img src="<%=user.image.profile%>" class="logo" alt="Userphoto">
+            <div class="d-flex flex-column me-3">
+                <h3><%=user.name%></h3>
+                <h5>@(<%=user.username%>)</h5>
+                <% if(user.bio) { %>
+                    <p><%=user.bio%></p>
+                    <% } %>
+                </div>
+            </div>
+            <div class="d-flex ms-sm-auto">
+                <form action="/logout" method="post" class="align-self-center">
+                    <button type="submit" class="btn btn-danger">Logout</button>
+                </form>
+                <a href="/campgrounds" class="ms-3 align-self-center btn btn-secondary">Go back</a>
+            </div>
+        </div>
+    </div>   
     <hr>
     <div class="row d-flex justify-content-center">
         <div class="col-lg-4 mb-3 mb-lg-0">
@@ -10,8 +25,8 @@
                 <div class="card-body">
                     <h3 class="card-title">Edit Profile</h3>
                     <p class="my-3 mandatory">* Mandatory Fields</p>
-                    <form action="/profile?_method=PATCH" method="post" class="needs-validation" novalidate>
-                        <label class="mt-3"><b>Edit My Name: </b></label>
+                    <form action="/profile?_method=PATCH" method="post" class="needs-validation" novalidate enctype="multipart/form-data">
+                        <label class="mt-3"><b>Edit My Profile: </b></label>
                         <div class="mt-3 d-none">
                             <label for="username" class="form-label">Username <span class="mandatory">*</span> : </label>
                             <input type="text" class="form-control" name="username" id="username"
@@ -29,7 +44,7 @@
                             </div>
                         </div>
                         <div class="mt-3">
-                            <label for="name" class="form-label">Enter Name<span class="mandatory">*</span> : </label>
+                            <label for="name" class="form-label">Edit Name<span class="mandatory">*</span> : </label>
                             <input type="text" class="form-control" name="name" id="name" value="<%=user.name%>"
                                 placeholder="Enter name" required>
                             <div class="valid-feedback">
@@ -40,17 +55,50 @@
                             </div>
                         </div>
                         <div class="mt-3">
-                            <label for="password" class="form-label">Enter Current Password (is required to update profile)<span class="mandatory">*</span> : </label>
-                            <input type="password" class="form-control" name="password" id="password"
-                                placeholder="Enter current password" required>
+                            <label for="bio" class="form-label">Edit Bio (Optional) : </label>
+                            <input type="text" class="form-control" name="bio" id="bio" value="<%=user.bio%>"
+                                placeholder="Enter bio">
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Please provide a valid password.
+                                Please provide a valid bio.
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <label for="image" class="form-label">Replace Profile Photo : </label>
+                            <input type="file" class="form-control" name="image" id="image"
+                                accept="image/avif, image/gif, image/jpg, image/jpeg, image/png, image/webp">
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                        <div class="mt-4 form-check form-switch">
+                            <label for="deleteImage" class="form-label">Or Toggle to Delete Profile Photo</label>
+                            <input type="checkbox" role="switch" name="deleteImage" id="deleteImage" class="form-check-input" value="<%=user.image.filename%>">
+                            <div class="valid-feedback">
+                                Looks good!
                             </div>
                         </div>
                         <label class="mt-5"><b>Change My Current Password: </b></label>
+                        <div class="mt-3">
+                            <label class="form-label">Password Instructions:</label>
+                            <div class="card-footer border-0">
+                                <p>
+                                    <b>Password Example:</b> Abcd@123
+                                </p>
+                                <ul>
+                                    <li>Must be at least 8 to 15 characters long.</li>
+                                    <li>Should include a mix of uppercase and lowercase letters.</li>
+                                    <li>Must include at least one digit (0-9).</li>
+                                    <li>Must include at least one special character from @$!%*?&.</li>
+                                    <li>Avoid using easily guessable information, such as your username or common words.</li>
+                                </ul>
+                                <p>
+                                    <b>Note:</b> Ensure your password is strong and not easily guessable. Do not use the same password across multiple accounts.
+                                </p>
+                            </div>
+                        </div>
                         <div class="mt-3">
                             <label for="newPassword" class="form-label">Enter New Password (Optional) : </label>
                             <input type="password" class="form-control" name="newPassword" id="newPassword"
@@ -59,7 +107,7 @@
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Passwords don't match.
+                                Passwords don't match, try again.
                             </div>
                         </div>
                         <div class="mt-3">
@@ -70,13 +118,24 @@
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Passwords don't match.
+                                Passwords don't match, try again.
+                            </div>
+                        </div>
+                        <label class="mt-5"><b>Confirm Changes: </b></label>
+                        <div class="mt-3">
+                            <label for="password" class="form-label">Enter Current Password (is required to update profile or change password)<span class="mandatory">*</span> : </label>
+                            <input type="password" class="form-control" name="password" id="password"
+                                placeholder="Enter current password" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a valid password.
                             </div>
                         </div>
                         <div class="d-grid mt-3 gap-2">
                             <button type="submit" class="btn btn-success">Submit</button>
                             <button type="reset" class="btn btn-danger">Reset</button>
-                            <a href="/users/<%=user.username%>" class="btn btn-secondary">Go back</a>
                         </div>
                     </form>
                 </div>
@@ -142,4 +201,6 @@
             </div>
         </div>
     </div>
-    <script src="/JS/Sort Campgrounds.js"></script>
+    <% if(!error){ %>
+        <script src="/JS/Sort Campgrounds.js"></script>
+    <% } %>
