--- a/views/users/Register.ejs
+++ b/views/users/Register.ejs
@@ -8,9 +8,24 @@
                     <div class="card-body">
                         <h3 class="card-title">Create a new account</h3>
                         <p class="mb-3 mt-4 mandatory">* Mandatory Fields</p>
-                        <form action="/register" method="post" class="needs-validation" novalidate>
+                        <form action="/register" method="post" class="needs-validation" novalidate enctype="multipart/form-data">
                             <div class="mt-3">
-                                <label for="username" class="form-label">Enter Username<span class="mandatory">*</span>
+                                <label class="form-label">Username Instructions : </label>
+                                <div class="card-footer border-0">
+                                    <p><b>Username Example:</b> john123 or john_123</p>
+                                    <ul>
+                                        <li>Should start with a lowercase letter from (a-z).</li>
+                                        <li>Must be between 3 to 20 characters long.</li>
+                                        <li>Must end with a letter (a-z) or number (0-9).</li>
+                                        <li>Must not contain a sequence of two or more underscores (_).</li>
+                                        <li>Can contain ONLY lowercase letters from (a-z), digits, or underscores.</li>
+                                        <li>Please do not keep an explicit or inappropriate name/username. It may lead to suspension of your account.</li>
+                                    </ul>
+                                    <p><b>Note:</b> Choose wisely your username and email, for you will not be able to change it later.</p>
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <label for="username" class="form-label">Enter Username (cannot be changed later)<span class="mandatory">*</span>
                                     : </label>
                                 <input type="text" class="form-control" name="username" id="username"
                                     placeholder="Enter Username" required>
@@ -22,18 +37,45 @@
                                 </div>
                             </div>
                             <div class="mt-3">
-                                <label class="form-label">Username Instructions : </label>
+                                <label for="email" class="form-label">Enter Email (cannot be changed later)<span class="mandatory">*</span> :
+                                </label>
+                                <input type="email" class="form-control" name="email" id="email"
+                                    placeholder="Enter Email" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Please provide a valid email.
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <label class="form-label">Password Instructions:</label>
                                 <div class="card-footer border-0">
-                                    <p><b>Username Example:</b> john123 or john_123</p>
+                                    <p>
+                                        <b>Password Example:</b> Abcd@123
+                                    </p>
                                     <ul>
-                                        <li>Should start with a lowercase letter from (a-z).</li>
-                                        <li>Must be between 3 to 20 characters long.</li>
-                                        <li>Must end with a letter (a-z) or number (0-9).</li>
-                                        <li>Must not contain a sequence of two or more underscores (_).</li>
-                                        <li>Can contain lowercase letters from (a-z), digits, or underscores.</li>
-                                        <li>Please do not keep an explicit or inappropriate name/username. It may lead to suspension of your account.</li>
+                                        <li>Must be at least 8 to 15 characters long.</li>
+                                        <li>Should include a mix of uppercase and lowercase letters.</li>
+                                        <li>Must include at least one digit (0-9).</li>
+                                        <li>Must include at least one special character from @$!%*?&.</li>
+                                        <li>Avoid using easily guessable information, such as your username or common words.</li>
                                     </ul>
-                                    <p><b>Note:</b> Choose wisely your username, for you will not be able to change it later.</p>
+                                    <p>
+                                        <b>Note:</b> Ensure your password is strong and not easily guessable. Do not use the same password across multiple accounts.
+                                    </p>
+                                </div>
+                            </div>                            
+                            <div class="mt-3">
+                                <label for="password" class="form-label">Enter Password<span class="mandatory">*</span>
+                                    : </label>
+                                <input type="password" class="form-control" name="password" id="password"
+                                    placeholder="Enter Password" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback">
+                                    Please provide a valid password.
                                 </div>
                             </div>
                             <div class="mt-3">
@@ -49,27 +91,19 @@
                                 </div>
                             </div>
                             <div class="mt-3">
-                                <label for="email" class="form-label">Enter Email<span class="mandatory">*</span> :
-                                </label>
-                                <input type="email" class="form-control" name="email" id="email"
-                                    placeholder="Enter Email" required>
+                                <label for="bio" class="form-label">Enter Bio (Optional) : </label>
+                                <input type="text" class="form-control" name="bio" id="bio"
+                                    placeholder="Enter bio">
                                 <div class="valid-feedback">
                                     Looks good!
-                                </div>
-                                <div class="invalid-feedback">
-                                    Please provide a valid email.
                                 </div>
                             </div>
                             <div class="mt-3">
-                                <label for="password" class="form-label">Enter Password<span class="mandatory">*</span>
-                                    : </label>
-                                <input type="password" class="form-control" name="password" id="password"
-                                    placeholder="Enter Password" required>
+                                <label for="image" class="form-label">Upload Profile Photo (Optional) : </label>
+                                <input type="file" class="form-control" name="image" id="image"
+                                    accept="image/avif, image/gif, image/jpg, image/jpeg, image/png, image/webp">
                                 <div class="valid-feedback">
                                     Looks good!
-                                </div>
-                                <div class="invalid-feedback">
-                                    Please provide a valid password.
                                 </div>
                             </div>
                             <div class="d-grid mt-3 gap-2">
