--- a/public/CSS/Application Styles.css
+++ b/public/CSS/Application Styles.css
@@ -3,6 +3,20 @@ img.logo {
     border-radius: 50%;
 }
 
+.password {
+    position: relative;
+}
+
+.togglePassword {
+    top: 2.5rem;
+    right: 2rem;
+    width: 1.5em;
+    height: 1.4em;
+    cursor: pointer;
+    display: inline;
+    position: absolute;
+}
+
 .popup {
     margin-top: 10px;
     text-align: center;
