--- a/views/partials/Flash.ejs
+++ b/views/partials/Flash.ejs
@@ -10,12 +10,12 @@
 </svg>
 
 <% if(success && success.length) { %>
-    <div class="alert alert-success d-flex align-items-center alert-dismissible fade show col-lg-6 offset-lg-3"
+    <div class="alert alert-success d-flex flex-wrap align-items-center alert-dismissible fade show col-lg-6 offset-lg-3"
         role="alert">
-        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
-            <use xlink:href="#check-circle-fill" />
-        </svg>
         <div>
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
+                <use xlink:href="#check-circle-fill" />
+            </svg>
             <%=success%>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
@@ -23,12 +23,12 @@
     <% } %>
 
         <% if(error && error.length) { %>
-            <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show col-lg-6 offset-lg-3"
+            <div class="alert alert-danger d-flex flex-wrap align-items-center alert-dismissible fade show col-lg-6 offset-lg-3"
                 role="alert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-                    <use xlink:href="#exclamation-triangle-fill" />
-                </svg>
                 <div>
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+                        <use xlink:href="#exclamation-triangle-fill" />
+                    </svg>
                     <%=error%>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
