--- a/views/users/Register.ejs
+++ b/views/users/Register.ejs
@@ -66,11 +66,13 @@
                                     </p>
                                 </div>
                             </div>                            
-                            <div class="mt-3">
+                            <div class="mt-3 password">
                                 <label for="password" class="form-label">Enter Password<span class="mandatory">*</span>
                                     : </label>
                                 <input type="password" class="form-control" name="password" id="password"
                                     placeholder="Enter Password" required>
+                                <img src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1701142131/YelpCamp%20Related%20Media/zkvg4rxknhwuebgnmd6v.jpg"
+                                    class="togglePassword">
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
@@ -93,7 +95,7 @@
                             <div class="mt-3">
                                 <label for="bio" class="form-label">Enter Bio (Optional) : </label>
                                 <input type="text" class="form-control" name="bio" id="bio"
-                                    placeholder="Enter bio">
+                                    placeholder="Enter Bio">
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
@@ -119,3 +121,4 @@
             </div>
         </div>
     </div>
+    <script src="/JS/Hide-Show Password.js"></script>
