Search & Filter Update 2.1.3V (Major Update)

--- a/views/layouts/BoilerPlate.ejs
+++ b/views/layouts/BoilerPlate.ejs
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="/CSS/Categories Page.css">
 </head>
 
-<body class="d-flex flex-column bg-light" style="min-height: 100vh;">
+<body class="d-flex flex-column bg-light" style="min-height: 100vh; min-width: 320px;">
     <%- include('../partials/Navbar') %>
         <main class="container mt-3 mb-3 d-flex flex-column" style="flex: 1;">
             <%- include('../partials/Flash') %>
